--- a/style.css
+++ b/style.css
@@ -3,3 +3,35 @@ body{
     padding: 0;
     background-color: #d1d1e0;
 }
+h1{
+    color: #3e3e5b;
+    padding: 10px;
+    text-align: center;
+    font-size: 50px;
+}
+.board{
+    border: 2px solid #3e3e5b;
+    width: fit-content;
+    margin: 40px auto;
+    background-color: #9595b7;
+    box-shadow: 0 0 10px 5px rgba(0,0,0,0.2);
+    padding: 5px;
+}
+.box{
+    background-color: #fff;
+    height: 100px;
+    width: 100px;
+    margin: 5px;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.box:hover{
+    cursor: pointer;
+    transform: scale(1.05);
+    box-shadow: 0 0 5px 2px rgba(0,0,0,0.3);
+}
+.row{
+    display: flex;
+}
